# desktop_gis

DesktopGIS/: README.md  pyproject.toml
DesktopGIS/desktopgis/: gis_app.py
DesktopGIS/src/: main.py
DesktopGIS/tests/: test_gis_app.py
