[tool.poetry]
name = "desktopgis"
version = "0.1.0"
description = ""
authors = ["Roman Belchikov <lol2497@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyqt5 = "5.15.11"
pyqt5-qt5 = "5.15.2"
pyqt5-sip = "12.15.0"
qtwidgets = "1.1"
altgraph = "0.17.4"
colorama = "0.4.6"
pefile = "2024.8.26"
pyinstaller-hooks-contrib = "2024.8"
pywin32-ctypes = "0.2.3"
click = "8.1.7"
markdown = "3.7"
packaging = "24.1"

[tool.poetry.group.linters.dependencies]
black = "^24.3.0"
pathspec = "0.12.1"
mypy-extensions = "1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-qt = "4.4.0"
iniconfig = "2.0.0"
pluggy = "1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"